--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_auth: ^4.10.0
   validatorless: ^1.2.3
   flutter_overlay_loader: ^2.0.0
+  google_sign_in: ^6.1.5
   
 
 dev_dependencies:
