--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   validatorless: ^1.2.3
   flutter_overlay_loader: ^2.0.0
   google_sign_in: ^6.1.5
+  fluttericon: ^2.0.0
   
 
 dev_dependencies:
