--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_overlay_loader: ^2.0.0
   google_sign_in: ^6.1.5
   fluttericon: ^2.0.0
+  date_picker_timeline: ^1.2.5
   
 
 dev_dependencies:
