--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  
+  flutter_localizations:
+    sdk: flutter
+ 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
   provider: ^6.0.5
   sqflite: ^2.3.0
   path: ^1.8.3
@@ -48,7 +50,8 @@ dependencies:
   google_sign_in: ^6.1.5
   fluttericon: ^2.0.0
   date_picker_timeline: ^1.2.5
-  intl: ^0.18.1
+  # intl: ^0.18.1
+  
   
 
 dev_dependencies:
