--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,8 @@ dependencies:
   google_sign_in: ^6.1.5
   fluttericon: ^2.0.0
   date_picker_timeline: ^1.2.5
-  # intl: ^0.18.1
+  intl: ^0.18.0
+
   
   
 
